# CommunityAnalyzer

./: README.md
BugTracker/: README.md  bugzillaHistory.py  bugzillaParseDates.py  bugzillaProjectBugs.py
MailingList/: README.md  aggregateArchives.sh  componentSizes.py  createTable.py  downloadArchives.sh  mailboxParsing.py  marcinfoMonthlyMetrics.py  marcinfoScrape.py
RevisionControl/: README.md
RevisionControl/Bash/: gitLogCommand.sh
RevisionControl/Cxx/: AuthorChanges.cxx  AuthorChanges.h  CMakeLists.txt  Commit.cxx  Commit.h  CommitsContainer.cxx  CommitsContainer.h  Date.cxx  Date.h  File.cxx  File.h  FileChange.cxx  FileChange.h  FilesContainer.cxx  FilesContainer.h  GitNetwork.cxx  GitNetwork.h  GitStatisticsParser.cxx  PeopleContainer.cxx  PeopleContainer.h  Person.cxx  Person.h  README.md
RevisionControl/Gnuplot/: FlatnessContributionsRatio.gnuplot  FractionOfActiveContributors.gnuplot  NumberOfLinesOfCode.gnuplot  NumberOfLinesOfCodeVsTotalContributors.gnuplot  NumberOfMonthlyContributors.gnuplot  NumberOfTotalContributors.gnuplot
lkml/: README.md  download-lkml.sh  mbox2mongo.py
lkml/plots/: index.html  index.js
lkml/scripts/: compute-contributors.js  compute-first-response-time.js  compute-mean-response-time.js  compute-percent-answered.js  get-response-times.js  histograms.py  mean-response-time-to-csv-by-year.js  mean-response-time-to-csv.js  percent-answered-to-csv-by-year.js  percent-answered-to-csv.js  top-contributors-by-year.js  top-contributors.py  top-percentage-activity.py
